[package]
name = "halogen"
version = "0.1.2"
authors = ["Ryan Jacobs <ryanjacobs@utexas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
bootloader-locator = "0.0.4"
locate-cargo-manifest = "0.2.1"
